--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@unocss/reset": "^0.58.4",
     "vue": "^3.3.11"
   },
   "devDependencies": {
@@ -18,6 +19,8 @@
     "@unocss/preset-web-fonts": "^0.58.4",
     "@vitejs/plugin-vue": "^4.5.2",
     "Icônes": "link:@iconify-json/Icônes",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.2.2",
     "unocss": "^0.58.4",
     "vite": "^5.0.8",
