--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.58.4",
-    "vue": "^3.3.11"
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
+    "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.175",
