--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64",
     "@iconify/json": "^2.2.175",
     "@unocss/preset-icons": "^0.58.4",
     "@unocss/preset-uno": "^0.58.4",
