--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.177",
     "@unocss/reset": "^0.58.4",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "vue": "^3.3.11",
-    "vue-chartjs": "^5.3.0"
+    "vue-chartjs": "^5.3.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.64",
-    "@iconify/json": "^2.2.175",
     "@unocss/preset-icons": "^0.58.4",
     "@unocss/preset-uno": "^0.58.4",
     "@unocss/preset-web-fonts": "^0.58.4",
     "@vitejs/plugin-vue": "^4.5.2",
-    "Icônes": "link:@iconify-json/Icônes",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.2.2",
